Minor fix of a missing property

--- a/src/bundles/en/individuals.properties
+++ b/src/bundles/en/individuals.properties
@@ -42,3 +42,4 @@ locationID = Location ID
 individualID = ID
 catalogNumber = Encounter number
 noImages = No images found.
+matchingRecord = No matching record could be found for 
