--- a/.classpath
+++ b/.classpath
@@ -58,5 +58,6 @@
 	<classpathentry kind="lib" path="temp_jars/metadata-extractor-2.3.1.jar"/>
 	<classpathentry kind="lib" path="temp_jars/sanselan-0.97-incubator.jar"/>
 	<classpathentry kind="lib" path="temp_jars/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-fileupload-1.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
