Pushing changes from last night. Added filename to image popup display, and fixed an issue with the individualSearch select tool for Google Maps

--- a/src/bundles/en/encounter.properties
+++ b/src/bundles/en/encounter.properties
@@ -130,3 +130,4 @@ propertyValue = Property Value
 imageMetadata = Image Metadata
 matchingKeywords = Matching keywords:
 individualID = Marked Individual
+filename = Filename
