--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -28,6 +28,28 @@
     Photo-identification Library
   </description>
 
+  <!-- Struts Tag Library Descriptors -->
+  <jsp-config>
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-bean.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-bean.tld</taglib-location>
+    </taglib>
+
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-html.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-html.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>/WEB-INF/struts-logic.tld</taglib-uri>
+      <taglib-location>/WEB-INF/struts-logic.tld</taglib-location>
+    </taglib>
+    <taglib>
+      <taglib-uri>di</taglib-uri>
+      <taglib-location>/WEB-INF/lib/dilib.jar</taglib-location>
+    </taglib>
+  </jsp-config>
+
+
   <filter>
     <filter-name>UTF8Filter</filter-name>
     <filter-class>org.ecocean.servlet.StrutsUTF8Filter</filter-class>
@@ -808,28 +830,6 @@
     <url-pattern>*.jh</url-pattern>
   </servlet-mapping>
 
-  <!-- Struts Tag Library Descriptors -->
-  <taglib>
-    <taglib-uri>/WEB-INF/struts-bean.tld</taglib-uri>
-    <taglib-location>/WEB-INF/struts-bean.tld</taglib-location>
-  </taglib>
-
-  <taglib>
-    <taglib-uri>/WEB-INF/struts-html.tld</taglib-uri>
-    <taglib-location>/WEB-INF/struts-html.tld</taglib-location>
-  </taglib>
-
-  <taglib>
-    <taglib-uri>/WEB-INF/struts-logic.tld</taglib-uri>
-    <taglib-location>/WEB-INF/struts-logic.tld</taglib-location>
-  </taglib>
-
-
-  <taglib>
-    <taglib-uri>di</taglib-uri>
-    <taglib-location>/WEB-INF/lib/dilib.jar</taglib-location>
-  </taglib>
-
   <security-constraint>
     <display-name>Tomcat Server Configuration Security Constraint</display-name>
     <web-resource-collection>
@@ -921,6 +921,5 @@
   <security-role>
     <role-name>admin</role-name>
   </security-role>
-
 
 </web-app>
