--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -64,8 +64,12 @@ googleMapsKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt
 googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
 
 #DataNucleus parameters for object persistence
+# these lines create a connection to an embedded derby database.
 datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
 datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
+# these lines create a connection to a MySQL instances
+#datanucleus.ConnectionDriverName=com.mysql.jdbc.Driver
+#datanucleus.ConnectionURL=jdbc:mysql://localhost:3306/shepherd
 datanucleus.ConnectionUserName=shepherd
 datanucleus.ConnectionPassword=shepherd
 datanucleus.autoCreateSchema=true
