--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -39,10 +39,12 @@ urlToFooterGraphic=http://localhost:8080/shepherd-alpha2/images/lib_bottom.gif
 GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
 
 #wiki location
-wikiLocation=http://localhost:8080/wiki/doku.php?id=
+wikiLocation=
+# set wikiLocation to point to your wiki to enable integration, e.g.
+#wikiLocation=http://localhost:8080/wiki/doku.php?id=
 
 #whether to display and allow adoptions - set to true for yes and false for no
-allowAdoptions = true
+allowAdoptions = false
 
 #email addresses and parameters
 autoEmailAddress=webmaster@someplace.org
