modified the default tapirlink entry for accuracy

--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -107,7 +107,7 @@ allowNicknames=true
 isCatalogEditable = true
 
 #TapirLink-related settings
-#tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php?resource=ShepherdProject
+#tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php
 
 #show EXIF data
 showEXIF = true
