--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <version>2.5</version>
     </dependency>
     <dependency>
+          <groupId>ch.ethz.ganymed</groupId>
+          <artifactId>ganymed-ssh2</artifactId>
+          <version>build210</version>
+    </dependency>
+    <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.4</version>
