--- a/src/main/resources/bundles/en/overview.properties
+++ b/src/main/resources/bundles/en/overview.properties
@@ -1,21 +1,26 @@
-#
-# The Shepherd Project - A Mark-Recapture Framework
-# Copyright (C) 2011 Jason Holmberg
-#
-# This program is free software; you can redistribute it and/or
-# modify it under the terms of the GNU General Public License
-# as published by the Free Software Foundation; either version 2
-# of the License, or (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-#
-
-overview_maintext = Maintext can go here...
-overview_title = Photo-identification Library
+overview_maintext = <h1 class="intro">Introducing the ECOCEAN Whale Shark Photo-identification Library</h1><p class=\"lead\">The ECOCEAN Whale Shark Photo-identification Library is a visual database of whale shark (<em>Rhincodon typus</em>) <a href=\"encounters/allEncounters.jsp\">encounters</a> and of individually catalogued <a href=\"allSharks.jsp\">whale sharks</a>. The library is maintained and used by marine biologists to collect and analyse whale shark encounter data  to learn more about these amazing creatures.</p><p class=\"para\">The Library uses photographs of the skin patterning behind the gills of each shark and any scars to distinguish between individual animals. Cutting-edge software supports rapid identification using pattern recognition and photo management tools.</p><p class=\"para\">You too can assist with whale shark research  - by submitting photos and sighting information. The information you submit will be used in mark-recapture studies to help with the global conservation of this threatened species.</p>
+overview_title = ECOCEAN Whale Shark Photo-identification Library
+overview_reportit = Report An Encounter NOW!
+overview_language = Select Language
+what_do = Select Language
+read_overview = Introduction
+see_all_encounters = View All Encounters
+see_all_sharks = View All Sharks
+log_in = Login
+report_encounter = Report An Encounter
+contact_us = Contact Us
+home = Home
+search = Search
+encounter = Encounter
+shark = Shark
+join_the_dots = Join The Dots...
+menu = Menu
+last_sightings = Recent Encounters
+more = More
+ws_info = Whale Shark Information
+contributors = Contributors
+about = About
+forum = Forum
+blog = Blog
+area = Area to photograph
+match = Two matches
