fixing small issues

--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -67,17 +67,20 @@ googleMapsKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt
 googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
 
 #DataNucleus parameters for object persistence
-# these lines create a connection to an embedded derby database.
+
+# the following two lines create a connection to an embedded derby database.
 datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
 datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
-# these lines create a connection to a MySQL instances
+
+# the following three lines create a connection to a MySQL instances
 #datanucleus.ConnectionDriverName=com.mysql.jdbc.Driver
 #datanucleus.ConnectionURL=jdbc:mysql://localhost:3306/shepherd
+
+#the following lines can be used for PostgreSQL persistence
+#datanucleus.ConnectionDriverName=org.postgresql.Driver
+#datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/myDatabaseName
+
 javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.jdo.JDOPersistenceManagerFactory
-javax.jdo.option.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-javax.jdo.option.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
-javax.jdo.option.ConnectionUserName=shepherd
-javax.jdo.option.ConnectionPassword=shepherd
 datanucleus.ConnectionUserName=shepherd
 datanucleus.ConnectionPassword=shepherd
 datanucleus.autoCreateSchema=true
