adding version injection (cherry-picking from commit 09b9092ba6e0e1a5b22eabe7dd59292d047fb367)

--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -127,3 +127,6 @@ showEXIF = true
 maximumElevationInMeters = true
 maximumDepthInMeters = true
 
+#project-related variables
+application.version=${pom.version}
+
