--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,14 @@
   </dependencies>
 
   <build>
+  
+      <resources>
+        <resource>
+          <directory>src/main/resources</directory>
+          <filtering>true</filtering>
+        </resource>
+    </resources>
+  
     <plugins>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
