--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ecocean</groupId>
   <artifactId>shepherd</artifactId>
-  <version>1.0.3-RELEASE</version>
+  <version>1.0.4-RELEASE</version>
   <packaging>war</packaging>
 
   <properties>
@@ -30,6 +30,11 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
+    </dependency>
+    <dependency>
+          <groupId>ch.ethz.ganymed</groupId>
+          <artifactId>ganymed-ssh2</artifactId>
+          <version>build210</version>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
@@ -184,6 +189,20 @@
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>2.8</version>
+<configuration>
+	        <reportOutputDirectory>${project.basedir}/target/${pom.artifactId}-${pom.version}</reportOutputDirectory>
+	        <destDir>javadoc</destDir>
+	        <show>private</show>
+	    </configuration>
+   
+   <executions>
+        <execution>
+          <phase>process-resources</phase>
+          <goals>
+            <goal>javadoc</goal>
+          </goals>
+        </execution>
+   </executions>
  
 </plugin>
       
