next round of multi-species commits

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -150,3 +150,4 @@ imageMetadata = Image Metadata
 matchingKeywords = Matching keywords:
 individualID = Marked Individual
 filename = Filename
+taxonomy = Taxonomy
