--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -98,6 +98,10 @@ C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
 citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
+institutionCode=myInstitution
+catalogCode=myCatalog
+
+#for single species libraries, fill out these fields
 kingdom=whichKingdom
 phylum=whichPhylum
 class=whichClass
@@ -105,8 +109,13 @@ order=whichOrder
 family=whichFamily
 genus=whichGenus
 species=whichSpecies
-institutionCode=myInstitution
-catalogCode=myCatalog
+
+
+#for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
+#genusSpecies0=genus specificEpithet
+#genusSpecies1=genus specificEpithet
+#genusSpecies2=genus specificEpithet
+
 
 #pattern recognition
 useSpotPatternRecognition=true
@@ -123,7 +132,10 @@ isCatalogEditable = true
 #show EXIF data
 showEXIF = true
 
-#elevation/depth
+#show taxonomy
+showTaxonomy = true
+
+#show elevation/depth
 maximumElevationInMeters = true
 maximumDepthInMeters = true
 
