--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -75,7 +75,7 @@ approval_checklist = Approval checklist
 approve = Approve
 setLocationID = Set Location ID
 setAlternateID = Set Alternate ID
-set = set
+set = Set
 initCapsSet = Set
 setOthersToInform = <font color=\"#990000\">Set others to inform:</font></strong><br> Separate multiple email addresses with a comma.
 matchedBy = Matched by
@@ -151,3 +151,4 @@ matchingKeywords = Matching keywords:
 individualID = Marked Individual
 filename = Filename
 taxonomy = Taxonomy
+resetTaxonomy = Reset genus and species
