more multi-species commits

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -152,3 +152,5 @@ individualID = Marked Individual
 filename = Filename
 taxonomy = Taxonomy
 resetTaxonomy = Reset genus and species
+#The notAvailable value must have a space dividing two words to be used by the EncounterSetGenusSpecies servlet
+notAvailable = Not available
