hopefully the last multi-species check in

--- a/src/main/resources/bundles/en/submit.properties
+++ b/src/main/resources/bundles/en/submit.properties
@@ -92,3 +92,4 @@ blog = Blog
 area = Area to photograph
 match = Two matches
 click2learn = Click here to learn more about the types of photos and video that are useful to our research.
+species = Species
