Added species search to encounter search

--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -63,3 +63,4 @@ verbatimEventDate = Verbatim event date
 noBehaviors = No behaviors have been defined.
 filenameField = Submitted filename is
 filenamesBlank = Leave blank to accept all filenames in your search. This field is case-sensitive.
+genusSpecies = Genus and species are
