-fixed a spelling issue -added showSize option...mopre commits for this feature later...

--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -34,7 +34,7 @@ urlToMastheadGraphic=images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
 urlToFooterGraphic=images/lib_bottom.gif
-footerGraphicAlt=Powored by ECOCEAN USA
+footerGraphicAlt=Powered by ECOCEAN USA
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
@@ -138,6 +138,9 @@ showTaxonomy = true
 #show elevation/depth
 maximumElevationInMeters = true
 maximumDepthInMeters = true
+
+#show size for encounters
+showSize = true
 
 #project-related variables
 application.version=${pom.version}
