--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -21,7 +21,7 @@
 imageLocation=encounters 
 
 #base url of the web site
-urlLocation=shepherd-1.0-alpha2
+urlLocation=www.mantamatcher.org
 
 #file system folder in which marked individual data will be stored (e.g. data files)
 markedIndividualDirectoryLocation=individuals 
@@ -34,60 +34,55 @@ urlToMastheadGraphic=images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
 urlToFooterGraphic=images/lib_bottom.gif
-footerGraphicAlt=Powered by ECOCEAN USA
+footerGraphicAlt=Powored by ECOCEAN USA
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
-GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
+GlobalUniqueIdentifierPrefix=ECOCEAN:MBIROSTRIS:
 
 #wiki location
 wikiLocation=
 # set wikiLocation to point to your wiki to enable integration, e.g.
-#wikiLocation=http://localhost:8080/wiki/doku.php?id=
+#wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
 
 #whether to display and allow adoptions - set to true for yes and false for no
-allowAdoptions = false
+allowAdoptions = true
 
 #email addresses and parameters
-autoEmailAddress=webmaster@someplace.org
-newSubmissionEmail=submissions@someplace.org
+autoEmailAddress=webmaster@mantamatcher.org
+newSubmissionEmail=submissions@mantamatcher.org
 mailHost=localhost
 removeEmailString=Do you want to REMOVE your email address from this database? Click the link below to remove it. You will no longer receive updates on your encounters.
 
 #HTML metadata for each page
-htmlDescription=A text description of your mark-recapture project
-htmlKeywords=A bunch of keywords to help search engines categorize your web site
-htmlTitle=My Mark-Recapture Project for Species X
 cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
-htmlAuthor=My Research Group
+htmlAuthor=ECOCEAN USA - info@ecoceanusa.org
+htmlDescription=The ECOCEAN Manta Matcher is a visual database of giant manta (Manta birostris) encounters and of individually catalogued giant mantas. The library is maintained and used by marine biologists to collect and analyse giant manta encounter data to learn more about these amazing creatures.
+htmlKeywords=giant manta,manta ray,Manta birostris,big fish,ECOCEAN USA, fish, coral, sharks, elasmobranch, mark, recapture, photo-identification, identification, conservation, citizen science
+htmlTitle=ECOCEAN MantaMatcher
 
 
 #Google Service keys for Search and Maps
-googleMapsKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
-googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
+googleMapsKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRQgRXet3y6wZebXyUrNwiCxW4Mr5BQWWJRAkB49_w9skQ6mWmL9e8yxDQ
+googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRQgRXet3y6wZebXyUrNwiCxW4Mr5BQWWJRAkB49_w9skQ6mWmL9e8yxDQ
 
 #DataNucleus parameters for object persistence
-
-# the following two lines create a connection to an embedded derby database.
-datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
-
-# the following three lines create a connection to a MySQL instances
+# these lines create a connection to an embedded derby database.
+#datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
+#datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
+# these lines create a connection to a MySQL instances
 #datanucleus.ConnectionDriverName=com.mysql.jdbc.Driver
 #datanucleus.ConnectionURL=jdbc:mysql://localhost:3306/shepherd
-
-#the following lines can be used for PostgreSQL persistence
-#datanucleus.ConnectionDriverName=org.postgresql.Driver
-#datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/myDatabaseName
-
 javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.jdo.JDOPersistenceManagerFactory
-datanucleus.ConnectionUserName=shepherd
-datanucleus.ConnectionPassword=shepherd
-datanucleus.autoCreateSchema=true
-datanucleus.NontransactionalRead=true
-datanucleus.Multithreaded=true
-datanucleus.RestoreValues=true
-datanucleus.storeManagerType=rdbms
+datanucleus.ConnectionDriverName=org.postgresql.Driver
+datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/mantas2
+datanucleus.autoCreateSchema = true
+datanucleus.ConnectionUserName=FUZZ
+datanucleus.ConnectionPassword=FUZZ
+datanucleus.NontransactionalRead = true
+datanucleus.Multithreaded = true
+datanucleus.RestoreValues = true
+datanucleus.storeManagerType = rdbms	
 
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
@@ -97,28 +92,28 @@ maxTriangleRotation=30
 C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
-citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
-institutionCode=myInstitution
-catalogCode=myCatalog
+citation=Marshall, Andrea and Holmberg, Jason. MantaMatcher Photo-identification Library, 2011. http://www.mantamatcher.org
+institutionCode=ECOCEAN
+catalogCode=MANTA
 
 #for single species libraries, fill out these fields
-kingdom=whichKingdom
-phylum=whichPhylum
-class=whichClass
-order=whichOrder
-family=whichFamily
-genus=whichGenus
+kingdom=ANIMALIA
+phylum=CHORDATA
+class=CHONDRICHTHYES
+order=	RAJIFORMES
+family=MOBULIDAE
+genus=Manta
 species=whichSpecies
 
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
-#genusSpecies0=genus specificEpithet
-#genusSpecies1=genus specificEpithet
+genusSpecies0=Manta birostris
+genusSpecies1=Manta alfredi
 #genusSpecies2=genus specificEpithet
 
 
 #pattern recognition
-useSpotPatternRecognition=true
+useSpotPatternRecognition=false
 
 #nicknames
 allowNicknames=true
@@ -127,21 +122,14 @@ allowNicknames=true
 isCatalogEditable = true
 
 #TapirLink-related settings
-#tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php
+#tapirLinkURL = http://www.mantamatcher.org/tapirlink/admin/configurator.php
 
 #show EXIF data
 showEXIF = true
 
-#show taxonomy
-showTaxonomy = true
-
-#show elevation/depth
-maximumElevationInMeters = true
+#elevation/depth
+maximumElevationInMeters = false
 maximumDepthInMeters = true
 
-#show size for encounters
-showSize = true
-
 #project-related variables
-application.version=${pom.version}
-
+application.version=1.0.5-RELEASE
