--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -42,7 +42,7 @@ GlobalUniqueIdentifierPrefix=ECOCEAN:MBIROSTRIS:
 #wiki location
 wikiLocation=
 # set wikiLocation to point to your wiki to enable integration, e.g.
-#wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
+wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
 
 #whether to display and allow adoptions - set to true for yes and false for no
 allowAdoptions = true
