--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -34,14 +34,14 @@ urlToMastheadGraphic=images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
 urlToFooterGraphic=images/lib_bottom.gif
-footerGraphicAlt=Powored by ECOCEAN USA
+footerGraphicAlt=Powered by ECOCEAN USA
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 GlobalUniqueIdentifierPrefix=ECOCEAN:MBIROSTRIS:
 
 #wiki location
 wikiLocation=
-# set wikiLocation to point to your wiki to enable integration, e.g.
+#set wikiLocation to point to your wiki to enable integration, e.g.
 wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
 
 #whether to display and allow adoptions - set to true for yes and false for no
@@ -122,7 +122,7 @@ allowNicknames=true
 isCatalogEditable = true
 
 #TapirLink-related settings
-#tapirLinkURL = http://www.mantamatcher.org/tapirlink/admin/configurator.php
+tapirLinkURL = http://www.mantamatcher.org/tapirlink/admin/configurator.php
 
 #show EXIF data
 showEXIF = true
