--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-title = Shark Search Criteria
+title = Individual Search Criteria
 instructions = Select from the criteria below to tailor your search among the marked individuals stored in the database.
 sex = Sex is
 male = Male
