reorganizing to group like parameters and setting a better urlLocation default value, allowing Maven to specify the WAR file URL

--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -21,7 +21,7 @@
 imageLocation=encounters 
 
 #base url of the web site
-urlLocation=shepherd-1.0-alpha2
+urlLocation=localhost:8080/shepherd-${pom.version}
 
 #file system folder in which marked individual data will be stored (e.g. data files)
 markedIndividualDirectoryLocation=individuals 
@@ -29,18 +29,10 @@ markedIndividualDirectoryLocation=individuals
 #file system folder in which adoption data will be stored (e.g. photos)
 adoptionLocation=adoptions
 
-#URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=images/masthead.jpg
-
-#URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=images/lib_bottom.gif
-footerGraphicAlt=Powered by ECOCEAN USA
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
 
-#wiki location
-wikiLocation=
 # set wikiLocation to point to your wiki to enable integration, e.g.
 #wikiLocation=http://localhost:8080/wiki/doku.php?id=
 
@@ -60,6 +52,13 @@ htmlTitle=My Mark-Recapture Project for Species X
 cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
 htmlAuthor=My Research Group
+
+#URL to the graphic to be displayed at the top of every page through header.jsp
+urlToMastheadGraphic=images/masthead.jpg
+
+#URL to the graphic to be displayed at the bottom of every page through footer.jsp
+urlToFooterGraphic=images/lib_bottom.gif
+footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
 
 
 #Google Service keys for Search and Maps
@@ -89,6 +88,10 @@ datanucleus.Multithreaded=true
 datanucleus.RestoreValues=true
 datanucleus.storeManagerType=rdbms
 
+
+#pattern recognition
+useSpotPatternRecognition=true
+
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
 epsilon=0.01 
@@ -111,14 +114,6 @@ genus=whichGenus
 species=whichSpecies
 
 
-#for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
-#genusSpecies0=genus specificEpithet
-#genusSpecies1=genus specificEpithet
-#genusSpecies2=genus specificEpithet
-
-
-#pattern recognition
-useSpotPatternRecognition=true
 
 #nicknames
 allowNicknames=true
@@ -133,7 +128,13 @@ isCatalogEditable = true
 showEXIF = true
 
 #show taxonomy
-showTaxonomy = true
+showTaxonomy = false
+
+#for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
+#genusSpecies0=genus specificEpithet
+#genusSpecies1=genus specificEpithet
+#genusSpecies2=genus specificEpithet
+
 
 #show elevation/depth
 maximumElevationInMeters = true
