--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -75,6 +75,7 @@ approval_checklist = Approval checklist
 approve = Approve
 setLocationID = Set Location ID
 setAlternateID = Set Alternate ID
+setVerbatimEventDate = Set Verbatim Event Date
 set = Set
 initCapsSet = Set
 setOthersToInform = <font color=\"#990000\">Set others to inform:</font></strong><br> Separate multiple email addresses with a comma.
