--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <datanucleus.version>2.1.0-release</datanucleus.version>
     <datanucleus.rest.version>2.0.0-release</datanucleus.rest.version>
     <datanucleus.lib.scope>compile</datanucleus.lib.scope>
+     <geotools.version>2.7.0</geotools.version>
   </properties>
 
   <repositories>
@@ -22,6 +23,11 @@
     <repository>
       <id>repo2</id>
       <url>http://repo2.maven.org/maven2</url>
+    </repository>
+        <repository>
+          <id>osgeo</id>
+          <name>Open Source Geospatial Foundation Repository</name>
+          <url>http://download.osgeo.org/webdav/geotools/</url>
     </repository>
   </repositories>
 
@@ -168,6 +174,25 @@
       <artifactId>dilib</artifactId>
       <version>1.0</version>
     </dependency>
+    
+    <dependency>
+          <groupId>org.geotools</groupId>
+          <artifactId>gt-main</artifactId>
+          <version>${geotools.version}</version>
+    </dependency>
+    
+      <dependency>
+        <groupId>org.geotools</groupId>
+        <artifactId>gt-shapefile</artifactId>
+        <version>${geotools.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.geotools</groupId>
+        <artifactId>gt-epsg-hsql</artifactId>
+        <version>${geotools.version}</version>
+  </dependency>
+    
+    
   </dependencies>
 
   <build>
