--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -823,6 +823,11 @@
     <servlet-name>IndividualRemoveDataFile</servlet-name>
     <url-pattern>/IndividualRemoveDataFile</url-pattern>
   </servlet-mapping>
+  
+      <servlet-mapping>
+        <servlet-name>EncounterSetVerbatimEventDate</servlet-name>
+        <url-pattern>/EncounterSetVerbatimEventDate</url-pattern>
+  </servlet-mapping>
 
   <!-- Action Servlet Mapping -->
   <servlet-mapping>
