removing some whale shark-specific entries in the RSS feeds (cherry-picking from commit 7136479cc8e059181ce776b92d4c564adbf45c09) reorganizing to group like parameters and setting a better urlLocation default value, allowing Maven to specify the WAR file URL (cherry-picking from commit b5c1943eee5867f99824b0b92e1f0c2040557ff8) Removing some shark-specific text (cherry-picking from commit 1c66db36e116767fc5e741e84a6631b76468601d) extending multi-species support to display genus and species in individuals.jsp, searchResults.jsp, and individualSearchResults.jps (cherry-picking from commit f6d265f0e018674ac83afb984b997120d614c17c) -Re-instated verbatimEventDate as editable in encounters -Fixed an anchor issue for setting encounter size -Fixed bad web-xml security entries (cherry-picking from commit 923628af026556c0975847a883636ff033514e92) Fixing the update email process when an individual is resighted. Less code and now more accurate. (cherry-picking from commit 1ad60a154489e02c642f3626bfc2b52e8b8183b8) adding GIS shapefile support (cherry-picking from commit c09370022d07ebee6984d5ab1bea1af52a4a7910) adding Date and URL to shapefile attributes (cherry-picking from commit 70a1dd8003a27e4ecd94bce355d7930cdbbf91c6) added more genus/species identifiers in search results
prepping for 1.0.6 release (cherry-picking from commit d9a32898687658f4cb89b54dc0d8cddd4c230214)
removing some whale shark-specific entries in the RSS feeds (cherry-picking from commit 7136479cc8e059181ce776b92d4c564adbf45c09)
Removing some shark-specific text (cherry-picking from commit 1c66db36e116767fc5e741e84a6631b76468601d)
extending multi-species support to display genus and species in individuals.jsp, searchResults.jsp, and individualSearchResults.jps (cherry-picking from commit f6d265f0e018674ac83afb984b997120d614c17c)
-Re-instated verbatimEventDate as editable in encounters
-Fixed an anchor issue for setting encounter size
-Fixed bad web-xml security entries (cherry-picking from commit 923628af0265

--- a/src/main/resources/bundles/en/commonConfiguration.properties
+++ b/src/main/resources/bundles/en/commonConfiguration.properties
@@ -124,6 +124,9 @@ isCatalogEditable = true
 #TapirLink-related settings
 tapirLinkURL = http://www.mantamatcher.org/tapirlink/admin/configurator.php
 
+#GBIF IPT-related settings
+#iptURL = http://localhost:8080/ipt-2.0.2
+
 #show EXIF data
 showEXIF = true
 
