--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -21,7 +21,7 @@
 imageLocation=encounters 
 
 #base url of the web site
-urlLocation=shepherd-1.0-alpha2
+urlLocation=localhost:8080/shepherd-${pom.version}
 
 #file system folder in which marked individual data will be stored (e.g. data files)
 markedIndividualDirectoryLocation=individuals 
@@ -29,18 +29,10 @@ markedIndividualDirectoryLocation=individuals
 #file system folder in which adoption data will be stored (e.g. photos)
 adoptionLocation=adoptions
 
-#URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=images/masthead.jpg
-
-#URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=images/lib_bottom.gif
-footerGraphicAlt=Powored by ECOCEAN USA
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
 
-#wiki location
-wikiLocation=
 # set wikiLocation to point to your wiki to enable integration, e.g.
 #wikiLocation=http://localhost:8080/wiki/doku.php?id=
 
@@ -60,6 +52,13 @@ htmlTitle=My Mark-Recapture Project for Species X
 cssURLLocation=css/ecocean.css
 htmlShortcutIcon=images/favicon.ico
 htmlAuthor=My Research Group
+
+#URL to the graphic to be displayed at the top of every page through header.jsp
+urlToMastheadGraphic=images/masthead.jpg
+
+#URL to the graphic to be displayed at the bottom of every page through footer.jsp
+urlToFooterGraphic=images/lib_bottom.gif
+footerGraphicAlt=Powered by ECOCEAN USA Shepherd Project
 
 
 #Google Service keys for Search and Maps
@@ -89,6 +88,10 @@ datanucleus.Multithreaded=true
 datanucleus.RestoreValues=true
 datanucleus.storeManagerType=rdbms
 
+
+#pattern recognition
+useSpotPatternRecognition=true
+
 #Modified Groth algorithm parameters for spot pattern recognition
 R=8
 epsilon=0.01 
@@ -98,6 +101,10 @@ C=0.99
 
 #Other common properties used for some data export (e.g. Encounter Search Excel export)
 citation=Lastname, Firstname. My species mark-recapture software library. MyURL.
+institutionCode=myInstitution
+catalogCode=myCatalog
+
+#for single species libraries, fill out these fields
 kingdom=whichKingdom
 phylum=whichPhylum
 class=whichClass
@@ -105,11 +112,8 @@ order=whichOrder
 family=whichFamily
 genus=whichGenus
 species=whichSpecies
-institutionCode=myInstitution
-catalogCode=myCatalog
 
-#pattern recognition
-useSpotPatternRecognition=true
+
 
 #nicknames
 allowNicknames=true
@@ -120,12 +124,27 @@ isCatalogEditable = true
 #TapirLink-related settings
 #tapirLinkURL = http://localhost:8080/tapirlink/admin/configurator.php
 
+#GBIF IPT-related settings
+#iptURL = http://localhost:8080/ipt-2.0.2
+
 #show EXIF data
 showEXIF = true
 
-#elevation/depth
+#show taxonomy
+showTaxonomy = false
+
+#for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
+#genusSpecies0=genus specificEpithet
+#genusSpecies1=genus specificEpithet
+#genusSpecies2=genus specificEpithet
+
+
+#show elevation/depth
 maximumElevationInMeters = true
 maximumDepthInMeters = true
+
+#show size for encounters
+showSize = true
 
 #project-related variables
 application.version=${pom.version}
