--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -173,6 +173,11 @@
     <servlet-name>EncounterSetAlternateID</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterSetAlternateID</servlet-class>
   </servlet>
+  
+    <servlet>
+      <servlet-name>EncounterSetVerbatimEventDate</servlet-name>
+      <servlet-class>org.ecocean.servlet.EncounterSetVerbatimEventDate</servlet-class>
+  </servlet>
 
   <servlet>
     <servlet-name>EncounterSetInformOthers</servlet-name>
@@ -723,6 +728,11 @@
     <servlet-name>EncounterSetAlternateID</servlet-name>
     <url-pattern>/EncounterSetAlternateID</url-pattern>
   </servlet-mapping>
+  
+    <servlet-mapping>
+      <servlet-name>EncounterSetVerbatimEventDate</servlet-name>
+      <url-pattern>/EncounterSetVerbatimEventDate</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>EncounterSetInformOthers</servlet-name>
@@ -803,6 +813,11 @@
     <servlet-name>IndividualRemoveDataFile</servlet-name>
     <url-pattern>/IndividualRemoveDataFile</url-pattern>
   </servlet-mapping>
+  
+      <servlet-mapping>
+        <servlet-name>EncounterSetVerbatimEventDate</servlet-name>
+        <url-pattern>/EncounterSetVerbatimEventDate</url-pattern>
+  </servlet-mapping>
 
   <!-- Action Servlet Mapping -->
   <servlet-mapping>
@@ -859,8 +874,9 @@
 
       <url-pattern>/appadmin/scanTaskAdmin.jsp</url-pattern>
       <url-pattern>/encounters/encounterSpotVisualizer.jsp</url-pattern>
-      <url-pattern>/sharkSetAlternateID</url-pattern>
-      <url-pattern>/encounterSetAlternateID</url-pattern>
+      <url-pattern>/IndividualSetAlternateID</url-pattern>
+      <url-pattern>/EncounterSetAlternateID</url-pattern>
+       <url-pattern>/EncounterSetVerbatimEventDate</url-pattern>
       <url-pattern>/CJS</url-pattern>
       <url-pattern>/software.jsp</url-pattern>
       <url-pattern>/interconnect/mac/Interconnect.jar</url-pattern>
