-fixing EncounterSetDelete, which did not send email notifications -adding the sendEmailNotifications property to allow users to turn off emails

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -40,6 +40,7 @@ GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
 allowAdoptions = false
 
 #email addresses and parameters
+sendEmailNotifications=true
 autoEmailAddress=webmaster@someplace.org
 newSubmissionEmail=submissions@someplace.org
 mailHost=localhost
