-fixing EncounterSetDelete, which did not send email notifications -adding the sendEmailNotifications property to allow users to turn off emails (cherry-picking from commit de2a66406310a26cde8533eb9fb9959903e43d8d)

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -48,6 +48,7 @@ wikiLocation=http://www.mantamatcher.org/wiki/doku.php?id=
 allowAdoptions = true
 
 #email addresses and parameters
+sendEmailNotifications=true
 autoEmailAddress=webmaster@mantamatcher.org
 newSubmissionEmail=submissions@mantamatcher.org
 mailHost=localhost
