--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <id>repo2</id>
       <url>http://repo2.maven.org/maven2</url>
     </repository>
+    <repository>
+    	<id>maven2-repository.dev.java.net</id>
+    	<name>Java.net Repository for Maven</name>
+    	<url>http://download.java.net/maven/2/</url>
+    </repository>
   </repositories>
 
   <dependencies>
