--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ecocean</groupId>
   <artifactId>shepherd</artifactId>
-  <version>1.0.7-EXPERIMENTAL</version>
+  <version>2.0.0-EXPERIMENTAL</version>
   <packaging>war</packaging>
 
   <properties>
-    <datanucleus.version>2.1.0-release</datanucleus.version>
-    <datanucleus.rest.version>2.0.0-release</datanucleus.rest.version>
+    <datanucleus.version>3.0.2</datanucleus.version>
+    <datanucleus.enhancer.version>3.0.1</datanucleus.enhancer.version>
+    <datanucleus.spatial.version>3.0.1</datanucleus.spatial.version>
+    <datanucleus.rest.version>2.0.1</datanucleus.rest.version>
+    <datanucleus.jodatime.version>3.0.0-release</datanucleus.jodatime.version>
+    <datanucleus.jpa.version>2.1.8</datanucleus.jpa.version>
     <datanucleus.lib.scope>compile</datanucleus.lib.scope>
      <geotools.version>2.7.0</geotools.version>
   </properties>
@@ -96,7 +100,7 @@
     <dependency>
       <groupId>org.datanucleus</groupId>
       <artifactId>datanucleus-enhancer</artifactId>
-      <version>${datanucleus.version}</version>
+      <version>${datanucleus.enhancer.version}</version>
       <scope>${datanucleus.lib.scope}</scope>
     </dependency>
     <dependency>
@@ -120,13 +124,19 @@
     <dependency>
       <groupId>org.datanucleus</groupId>
       <artifactId>datanucleus-jpa</artifactId>
-      <version>${datanucleus.version}</version>
+      <version>${datanucleus.jpa.version}</version>
       <scope>${datanucleus.lib.scope}</scope>
+    </dependency>
+        <dependency>
+          <groupId>org.datanucleus</groupId>
+          <artifactId>datanucleus-api-jdo</artifactId>
+          <version>${datanucleus.version}</version>
+          <scope>${datanucleus.lib.scope}</scope>
     </dependency>
     <dependency>
       <groupId>org.datanucleus</groupId>
       <artifactId>datanucleus-spatial</artifactId>
-      <version>${datanucleus.version}</version>
+      <version>${datanucleus.spatial.version}</version>
       <scope>${datanucleus.lib.scope}</scope>
       <exclusions>
         <exclusion>
@@ -138,7 +148,7 @@
     <dependency>
       <groupId>org.datanucleus</groupId>
       <artifactId>datanucleus-jodatime</artifactId>
-      <version>${datanucleus.version}</version>
+      <version>${datanucleus.jodatime.version}</version>
       <scope>${datanucleus.lib.scope}</scope>
     </dependency>
     <dependency>
