--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -80,7 +80,7 @@ datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
 #datanucleus.ConnectionDriverName=org.postgresql.Driver
 #datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/myDatabaseName
 
-javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.jdo.JDOPersistenceManagerFactory
+javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.api.jdo.JDOPersistenceManagerFactory
 datanucleus.ConnectionUserName=shepherd
 datanucleus.ConnectionPassword=shepherd
 datanucleus.autoCreateSchema=true
