--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -132,11 +132,11 @@ isCatalogEditable = true
 showEXIF = true
 
 #show taxonomy
-showTaxonomy = false
+showTaxonomy = true
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
-#genusSpecies0=genus specificEpithet
-#genusSpecies1=genus specificEpithet
+genusSpecies0=Chelonia mydas
+genusSpecies1=Eretmochelys imbricata
 #genusSpecies2=genus specificEpithet
 
 
