Back out Pretoma-specific changes

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -132,11 +132,11 @@ isCatalogEditable = true
 showEXIF = true
 
 #show taxonomy
-showTaxonomy = true
+showTaxonomy = false
 
 #for multi-species libraries, fill out the genus and species for each supported animal type, starting with genusSpecies0
-genusSpecies0=Chelonia mydas
-genusSpecies1=Eretmochelys imbricata
+#genusSpecies0=genus specificEpithet
+#genusSpecies1=genus specificEpithet
 #genusSpecies2=genus specificEpithet
 
 
