--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -139,6 +139,14 @@ showTaxonomy = false
 #genusSpecies1=genus specificEpithet
 #genusSpecies2=genus specificEpithet
 
+#show lifeStage
+showLifestage = true
+
+#defined life stages
+lifeStage0=juvenile
+lifeStage1=sub-adult
+lifeStage2=adult
+
 
 #show elevation/depth
 maximumElevationInMeters = true
