--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -156,5 +156,7 @@ individualID = Marked Individual
 filename = Filename
 taxonomy = Taxonomy
 resetTaxonomy = Reset genus and species
+resetLifeStage = Reset life stage
+lifeStage = Life stage
 #The notAvailable value must have a space dividing two words to be used by the EncounterSetGenusSpecies servlet
 notAvailable = Not available
