--- a/src/main/resources/bundles/en/encounterSearch.properties
+++ b/src/main/resources/bundles/en/encounterSearch.properties
@@ -61,6 +61,8 @@ goSearch = Search Sightings
 noVBDs = No verbatim event dates defined
 verbatimEventDate = Verbatim event date
 noBehaviors = No behaviors have been defined.
+noStages = No life stages have been defined.
 filenameField = Submitted filename is
 filenamesBlank = Leave blank to accept all filenames in your search. This field is case-sensitive.
 genusSpecies = Genus and species are
+lifeStage = Life stage is
