--- a/src/main/resources/bundles/en/submit.properties
+++ b/src/main/resources/bundles/en/submit.properties
@@ -75,3 +75,4 @@ submitterOrganization = Organization
 submitterProject = Project
 otherEmails = Other email addresses to inform of resightings and status*
 multipleEmailNote = Note: Multiple email addresses can be entered in email fields, using commas as separators
+lifeStage = Life stage is
