--- a/src/main/resources/bundles/en/individualSearch.properties
+++ b/src/main/resources/bundles/en/individualSearch.properties
@@ -57,4 +57,5 @@ verbatimEventDate = Verbatim event date
 noLocationIDs = No location IDs have been defined.
 andLocationID = Require the marked individual to be sighted in all selected location IDs (i.e., select multi-site matches).
 genusSpecies = Genus and species are
-lifeStage = Life stage was recorded at least once as: 
+lifeStage = Life stage was recorded at least once as 
+noStages = No stages are defined.
