-setting sqllite as the default database for easier table inspection -adding persistence metadata for genetics objects

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -69,8 +69,13 @@ googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LP
 #DataNucleus parameters for object persistence
 
 # the following two lines create a connection to an embedded derby database.
-datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
+#datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
+#datanucleus.ConnectionURL=jdbc:derby:shepherd_derby_database;create=true
+
+# the following two lines create a connection to an embedded derby database.
+datanucleus.ConnectionDriverName=org.sqlite.JDBC
+datanucleus.ConnectionURL=jdbc:sqlite:shepherd_sqllite_database
+
 
 # the following three lines create a connection to a MySQL instances
 #datanucleus.ConnectionDriverName=com.mysql.jdbc.Driver
