--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -147,6 +147,15 @@ lifeStage0=juvenile
 lifeStage1=sub-adult
 lifeStage2=adult
 
+#show measurements
+showMeasurements = true
+
+#Measurements
+measurement0=weight
+measurement1=length
+measurement2=height
+measurement3=ccl
+measurement4=ccw
 
 #show elevation/depth
 maximumElevationInMeters = true
