--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -158,5 +158,6 @@ taxonomy = Taxonomy
 resetTaxonomy = Reset genus and species
 resetLifeStage = Reset life stage
 lifeStage = Life stage
+measurements = Measurements
 #The notAvailable value must have a space dividing two words to be used by the EncounterSetGenusSpecies servlet
 notAvailable = Not available
