More work on measurements.

--- a/src/main/resources/bundles/commonConfiguration.properties
+++ b/src/main/resources/bundles/commonConfiguration.properties
@@ -157,10 +157,15 @@ showMeasurements = true
 
 #Measurements
 measurement0=weight
+measurementUnits0=kilograms
 measurement1=length
+measurementUnits1=meters
 measurement2=height
+measurementUnits2=meters
 measurement3=ccl
+measurementUnits3=meters
 measurement4=ccw
+measurementUnits4=meters
 
 #show elevation/depth
 maximumElevationInMeters = true
