--- a/src/main/resources/bundles/commonConfigurationLabels.properties
+++ b/src/main/resources/bundles/commonConfigurationLabels.properties
@@ -1,12 +1,9 @@
 #Labels for Measurements
-measurement0Label=Weight
-measurement1Label=Length
-measurement2Label=Height
-measurement3Label=Curve Carapace Length
-measurement4Label=Curve Carapace Width
+weight.label=Weight
+length.label=Length
+height.label=Height
+ccl.label=Curve Carapace Length
+ccw.label=Curve Carapace Width
 
-measurement0Desc=Kilograms
-measurement1Desc=Meters
-measurement2Desc=Meters
-measurement3Desc=Meters
-measurement4Desc=Meters
+kilograms.label=Kilograms
+meters.label=Meters
