I can successfully add and remove tissue sample through the servlet URLs. Next up: add these functions to the GUI.

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -161,3 +161,8 @@ lifeStage = Life stage
 measurements = Measurements
 #The notAvailable value must have a space dividing two words to be used by the EncounterSetGenusSpecies servlet
 notAvailable = Not available
+tissueSamples = Tissue Samples
+noTissueSamples = No tissue samples have been added to this encounter.
+sampleID = Sample ID
+addTissueSample = Add a tissue sample
+removeTissueSample = Remove
