--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -272,6 +272,16 @@
     <servlet-name>EncounterResetDate</servlet-name>
     <servlet-class>org.ecocean.servlet.EncounterResetDate</servlet-class>
   </servlet>
+  
+    <servlet>
+      <servlet-name>EncounterSetTissueSample</servlet-name>
+      <servlet-class>org.ecocean.servlet.EncounterSetTissueSample</servlet-class>
+  </servlet>
+  
+    <servlet>
+        <servlet-name>EncounterRemoveTissueSample</servlet-name>
+        <servlet-class>org.ecocean.servlet.EncounterRemoveTissueSample</servlet-class>
+  </servlet>
 
 
   <servlet>
@@ -515,6 +525,16 @@
   <servlet-mapping>
     <servlet-name>InterconnectSubmitSpots</servlet-name>
     <url-pattern>/InterconnectSubmitSpots</url-pattern>
+  </servlet-mapping>
+  
+    <servlet-mapping>
+      <servlet-name>EncounterSetTissueSample</servlet-name>
+      <url-pattern>/EncounterSetTissueSample</url-pattern>
+  </servlet-mapping>
+  
+      <servlet-mapping>
+        <servlet-name>EncounterRemoveTissueSample</servlet-name>
+        <url-pattern>/EncounterRemoveTissueSample</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
@@ -918,6 +938,8 @@
       <url-pattern>/EncounterSetAlternateID</url-pattern>
        <url-pattern>/EncounterSetVerbatimEventDate</url-pattern>
        <url-pattern>/EncounterSetLifeStage</url-pattern>
+        <url-pattern>/EncounterSetTissueSample</url-pattern>
+         <url-pattern>/EncounterRemoveTissueSample</url-pattern>
       <url-pattern>/CJS</url-pattern>
       <url-pattern>/software.jsp</url-pattern>
       <url-pattern>/interconnect/mac/Interconnect.jar</url-pattern>
