More tissue sample-related updates

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -166,3 +166,24 @@ noTissueSamples = No tissue samples have been added to this encounter.
 sampleID = Sample ID
 addTissueSample = Add a tissue sample
 removeTissueSample = Remove
+setTissueSample = Create/update tissue sample
+tissueType = Tissue type
+editTissueSample = Edit
+required = required
+tissueType = Tissue type
+preservationMethod = Preservation method
+storageLabID = Storage lab ID
+alternateSampleID = Alternate sample ID
+samplingProtocol = Sampling protocol
+samplingEffort = Sampling effort
+eventStartDate = Start date
+eventEndDate = End date
+fieldNumber = Field sample number
+fieldNotes = Field notes
+eventRemarks = Remarks
+institutionID = Institution ID
+collectionID = Collection ID
+collectionCode = Collection code
+datasetID = Dataset ID
+datasetName = Dataset name
+addTissueSample = Add tissue sample
