wrap up first pass of TissueSample management...on to haplotype analysis...

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -187,3 +187,5 @@ collectionCode = Collection code
 datasetID = Dataset ID
 datasetName = Dataset name
 addTissueSample = Add tissue sample
+values = Values
+analyses = Analyses
