Haplotype UI and core class work

--- a/src/main/resources/bundles/en/encounter.properties
+++ b/src/main/resources/bundles/en/encounter.properties
@@ -189,3 +189,7 @@ datasetName = Dataset name
 addTissueSample = Add tissue sample
 values = Values
 analyses = Analyses
+addHaplotype = Add haplotype
+setHaplotype = Add/update haplotype
+haplotype = Haplotype
+analysisID = Analysis ID
